--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,5 +1,11 @@
-.pp {
+.noPp {
   border-radius: 10px !important;
+}
+
+.pp {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
 }
 
 .brand {
