add profile page, set url params, delete profile & ajust responsive

--- a/styles/AddPin.module.css
+++ b/styles/AddPin.module.css
@@ -32,3 +32,15 @@
 .banner {
   width: 60%;
 }
+
+@media (min-width: 768px) {
+  .breakPoints {
+    display: inline;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .breakPoints {
+    display: none;
+  }
+}
