--- a/styles/Register.module.css
+++ b/styles/Register.module.css
@@ -56,3 +56,15 @@
 .banner {
   width: 60%;
 }
+
+@media (min-width: 768px) {
+  .breakPoints {
+    display: inline;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .breakPoints {
+    display: none;
+  }
+}
