--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -53,6 +53,20 @@
   height: 52px;
 }
 
+.btnActive {
+  height: 50px;
+  border-radius: 15px;
+  background-color: rgba(99, 121, 244, 1);
+  color: white;
+  font-weight: bold;
+  border: none;
+}
+
+.btnActive:hover {
+  background-color: rgba(99, 121, 244, 1);
+  height: 52px;
+}
+
 .signUp {
   cursor: pointer;
   color: rgba(99, 121, 244, 1);
