--- a/styles/ChangePassword.module.css
+++ b/styles/ChangePassword.module.css
@@ -49,6 +49,25 @@
   border: none;
 }
 
+.btn:hover {
+  background-color: rgba(100, 87, 87, 0.3);
+  height: 52px;
+}
+
+.btnActive {
+  height: 50px;
+  border-radius: 15px;
+  background-color: rgba(99, 121, 244, 1);
+  color: white;
+  font-weight: bold;
+  border: none;
+}
+
+.btnActive:hover {
+  background-color: rgba(99, 121, 244, 1);
+  height: 52px;
+}
+
 @media (min-width: 997.98px) {
   .breakPoints {
     display: inline;
