--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,11 +1,17 @@
 .noPp {
   border-radius: 10px !important;
+  cursor: pointer;
 }
 
 .pp {
   width: 50px;
   height: 50px;
   border-radius: 10px;
+  cursor: pointer;
+}
+
+.pp:hover {
+  border: solid white;
 }
 
 .brand {
@@ -23,7 +29,7 @@
 
 .userPhone {
   color: rgba(58, 61, 66, 0.9);
-  font-size: 16px;
+  font-size: 12px;
   margin-top: -17px;
 }
 
